--- a/src/components/StartScreen/StartScreen.css
+++ b/src/components/StartScreen/StartScreen.css
@@ -30,3 +30,32 @@
   overflow: hidden;
   z-index: 0;
 }
+
+.right-img-box {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(218, 218, 218);
+  border-radius: 22px;
+  width: 40px;
+  height: 40px;
+  top: 6vh;
+  left: 4vw;
+  padding: 4px;
+  transition-duration: 500ms;
+  opacity: .2;
+}
+
+.right-img {
+  width: 100%;
+  height: 100%;
+}
+
+.right-img-box:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+
