--- a/src/components/StartScreen/StartScreen.css
+++ b/src/components/StartScreen/StartScreen.css
@@ -42,10 +42,10 @@
   width: 40px;
   height: 40px;
   top: 6vh;
-  left: 4vw;
+  left: 3vw;
   padding: 4px;
   transition-duration: 500ms;
-  opacity: .2;
+  opacity: 0.2;
 }
 
 .right-img {
@@ -64,5 +64,3 @@
   height: 250vh;
   transition-duration: 1s;
 }
-
-
