--- a/src/components/Rocket/Rocket.css
+++ b/src/components/Rocket/Rocket.css
@@ -3,10 +3,83 @@
     transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg); /* Complete one full rotation */
+    transform: rotate(-360deg);
   }
 }
 
-.orbiting {
-  animation: orbit 4s linear infinite; /* Consider changing 'linear' to an easing function */
+@keyframes bob {
+  0% {
+    transform: translateY(0vh);
+  }
+  100% {
+    transform: translateY(2vh);
+  }
 }
+
+.rocket-container {
+  transition-duration: 1s;
+}
+
+/* Styles for the rocket container when it's orbiting */
+.orbiting {
+  position: absolute;
+  display: flex;
+  flex-direction: row-reverse;
+  width: 70vw;
+  height: 70vw;
+  top: 78vh;
+  left: 13.5vw;
+  animation: orbit 4000ms linear infinite;
+}
+
+/* Styles for the rocket image box when it's orbiting */
+.orbiting-img-box {
+  position: relative;
+  width: 5vw;
+  height: 5vw;
+  transform: rotate(-90deg);
+  opacity: 1;
+}
+
+/* Common styles for the rocket image */
+.rocket-img {
+  width: 100%;
+  height: 100%;
+}
+
+/* Styles for the rocket container before launch */
+.pre-launch {
+  position: absolute;
+  width: 5vw;
+  height: 5vw;
+  top: 78vh;
+  left: 90vw;
+  animation: bob 1s alternate infinite;
+  opacity: 0.5;
+  z-index: 2;
+  transform: rotate(-45deg);
+}
+
+/* Styles for the rocket image box before launch */
+.pre-launch-img-box {
+  transform: rotate(-45deg);
+  width: 5vw;
+  height: 5vw;
+}
+
+.pre-launch:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.upgrades {
+  position: absolute;
+  transition-duration: 1000ms;
+  transform: rotate(-45deg);
+  top: 23vh;
+  left: 35vw;
+  width: 30vw;
+  height: 30vw;
+  z-index: 2;
+}
+/* TODO: update how rocket adopts prelaunch class from upgrades */
