--- a/src/components/StartScreen/StartScreen.css
+++ b/src/components/StartScreen/StartScreen.css
@@ -42,10 +42,18 @@
   width: 40px;
   height: 40px;
   top: 6vh;
-  left: 3vw;
+  left: 2.5vw;
   padding: 4px;
   transition-duration: 500ms;
+}
+
+.show-button {
   opacity: 0.2;
+}
+
+.hidden-button {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .right-img {
