--- a/src/components/Rocket/Rocket.css
+++ b/src/components/Rocket/Rocket.css
@@ -3,7 +3,7 @@
     transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(-360deg);
   }
 }
 
@@ -20,7 +20,7 @@
   transition-duration: 1s;
   position: absolute;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: row-reverse;
 }
 
 .rocket-img-box {
@@ -52,10 +52,10 @@
 }
 
 .upgrades {
-  width: 30vw;
-  height: 30vw;
-  top: 23vh;
-  left: 35vw;
+  width: 32vw;
+  height: 53vh;
+  top: calc(55% - 26.5vh);
+  left: calc(50% - 16vw);
   z-index: 2;
 }
 
@@ -72,8 +72,8 @@
 }
 
 .upgrades-img-box {
-  width: 30vw;
-  height: 30vw;
+  width: 100%;
+  height: 100%;
   transform: rotate(-45deg);
 }
 
@@ -81,5 +81,3 @@
   cursor: pointer;
   opacity: 1;
 }
-
-/* TODO: update how rocket adopts prelaunch class from upgrades */
