--- a/src/components/StartScreen/StartScreen.css
+++ b/src/components/StartScreen/StartScreen.css
@@ -22,6 +22,7 @@
   height: 100%;
   overflow: hidden;
   top: 0;
+  z-index: 0;
 }
 
 .star {
@@ -41,10 +42,11 @@
   border-radius: 22px;
   width: 40px;
   height: 40px;
-  top: 6vh;
+  top: 4vh;
   left: 2.5vw;
   padding: 4px;
   transition-duration: 500ms;
+  z-index: 2;
 }
 
 .show-button {
