Add play button to GameScreen and update styles

--- a/src/components/GameScreen/GameScreen.css
+++ b/src/components/GameScreen/GameScreen.css
@@ -32,3 +32,16 @@
   color: white;
   font-size: 20px;
 }
+
+.play-button {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10vw;
+  height: 10vw;
+  top: 45vh;
+  left: 45vw;
+  cursor: pointer;
+  z-index: 2;
+}
