--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: show;
   font-family: "pixelSans";
   user-select: none;
 }
@@ -10,4 +10,9 @@ body {
   font-family: "pixelSans";
   src: local("pixelSans"),
     url("./fonts/PixelifySans-Regular.ttf") format("truetype");
+}
+
+.in-game {
+  transition-duration: 1s !important;
+  transform: translateY(100vh);
 }
