--- a/src/components/Rocket/Rocket.css
+++ b/src/components/Rocket/Rocket.css
@@ -41,18 +41,13 @@
 }
 
 .launched {
-  /* width: 5vw;
+  width: 5vw;
   height: 5vw;
   left: 47.5vw;
   top: 40vh;
   opacity: 1;
   z-index: 2;
-  transition-timing-function: cubic-bezier(0.1, 0.7, 1, 0.1);
-  transition-duration: 0.75s; */
-  width: 32vw;
-  height: 32vw;
-  top: 23vh;
-  left: 34vw;
+  transition-duration: 1s;
 }
 
 .pre-launch {
